--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
-  margin: 0; 
+  min-height: 100vh;
+  margin: 0;
 }
 
 .jeu {
@@ -23,7 +23,7 @@ body {
   background: #3a5a40;
   margin: 0 auto;
   padding: 0px 25px 25px 25px;
-  box-shadow: 5px 5px 35px 5px #000000
+  box-shadow: 5px 5px 35px 5px #000000;
 }
 
 #titre {
@@ -52,7 +52,7 @@ img {
 
 video {
   width: 500px;
-  height: auto;
+  max-height: 500px;
 }
 
 .boutons {
@@ -81,11 +81,137 @@ video {
   background-color: #588157;
   border-radius: 10%;
   border-color: #6c976c;
-  position: absolute;
-  left: 5%;
-  top: 5%;
 }
 
 #reset {
   background: #89cf88;
+}
+
+.mute {
+  height: 80px;
+  width: 150px;
+  font-size: 15px;
+  background-color: #588157;
+  border-radius: 10%;
+  border-color: #6c976c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mute {
+  background: #89cf88;
+}
+
+label {
+  text-align: center;
+  color: #000000;
+}
+
+@media screen and (max-width: 900px) {
+  
+body {
+  background: #344e41;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin:  10% 10% 0 10%;
+}
+
+.jeu {
+  max-width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #3a5a40;
+  box-shadow: 5px 5px 35px 5px #000000;
+}
+
+#titre {
+  font-weight: bolder;
+  font-size: 12px;
+  margin-bottom: 25px;
+  margin-top: 25px;
+  width: 100vw;
+  text-align: center;
+  font-family: "spiky";
+}
+
+.text {
+  font-size: 16px;
+  font-weight: bolder;
+  margin: 0px 5% 5% 5%;
+  width: 100%;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+video {
+  width: 100%;
+  height: 50vh;
+}
+
+.boutons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5%;
+  width: 33vw;
+}
+
+#btn {
+  height:8vh;
+  width: 33vh;
+  background-color: #588157;
+  border-radius: 10%;
+  font-size: 10px;
+  border-color: #6c976c;
+}
+
+#btn {
+  background: #89cf88;
+}
+
+#reset {
+  height:8vh;
+  width: 12vh;
+  font-size: 2vw;
+  background-color: #588157;
+  border-radius: 10%;
+  border-color: #6c976c;
+}
+
+#reset {
+  background: #89cf88;
+}
+
+.mute {
+  height:8vh;
+  width: 12vh;
+  font-size: 2vw;
+  background-color: #588157;
+  border-radius: 10%;
+  border-color: #6c976c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.mute {
+  background: #89cf88;
+}
+
+label {
+  text-align: center;
+  color: #000000;
+}
+
 }
